--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,24 @@
+html {
+  box-sizing: border-box;
+  font-size: 62.5%; /* 1 rem = 10px */    
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-image: url('./img/ff.png');
+  background-repeat: no-repeat;
+  background-color: #fff176 ;
+  background-size: contain;
+  font-family: 'Roboto Slab', serif;
+}
+@media (min-width: 992px) {
+  body {
+    background-image: url('./img/0.png');
+    background-repeat: no-repeat; 
+    background-attachment: fixed;
+    background-size: auto;
+    background-position: center center;
+  }
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
