--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,15 +5,16 @@ html {
 *, *:before, *:after {
   box-sizing: inherit;
 }
-body {
+
+/* body{
   background-image: url('./img/ff.png');
   background-repeat: no-repeat;
   background-color: #fff176 ;
   background-size: contain;
   font-family: 'Roboto Slab', serif;
-}
-@media (min-width: 992px) {
-  body {
+} 
+  @media (min-width: 992px) {
+  body{
     background-image: url('./img/0.png');
     background-repeat: no-repeat; 
     background-attachment: fixed;
@@ -21,4 +22,4 @@ body {
     background-position: center center;
   }
 }
-
+   */
