--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,6 +6,11 @@ html {
   box-sizing: inherit;
 }
 
+body{
+  margin: 0;
+  font-family: 'Roboto Slab', serif;  
+  background-color: #68B684;
+}
 /* body{
   background-image: url('./img/ff.png');
   background-repeat: no-repeat;
